[build-system]
requires = ["flit_core>=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flake8_pantsbuild"
author = "Pantsbuild developers"
author-email = "pantsbuild@gmail.com"
description-file = "README.md"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: Unix",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
requires-python = ">=2.7,<3.9,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"
requires = [
  "flake8>=3.7",
]

[tool.flit.entrypoints."flake8.extension"]
PB = "flake8_pantsbuild:Plugin"

[tool.black]
line-length = 100
target-version = ['py27']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
