[build-system]
# TODO: switch to Flit once it releases a fix for https://github.com/takluyver/flit/pull/305. See
# https://github.com/pantsbuild/flake8-pantsbuild/pull/2 for what the setup should look like.
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "flake8-pantsbuild"
version = "0.1.0"
description = "Various Flake8 lints used by the Pants project and its users."
authors = ["Pantsbuild developers <pantsbuild@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.plugins."flake8.extension"]
PB = "flake8_pantsbuild:Plugin"

[tool.poetry.dependencies]
python = ">=2.7,<3.9,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"
flake8 = ">=3.7"
importlib_metadata = {version = ">=1.3.0", python = "<3.8"}

[tool.black]
line-length = 100
target-version = ['py27']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
