[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "flake8-pantsbuild"
version = "1.0.0"
description = "Various Flake8 lints used by the Pants project and its users."
authors = ["Pantsbuild developers <pantsbuild@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://pants.readme.io/docs/python-linters-and-formatters"
repository = "https://github.com/pantsbuild/flake8-pantsbuild"
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[tool.poetry.plugins."flake8.extension"]
PB1 = "flake8_pantsbuild:Plugin"
PB2 = "flake8_pantsbuild:IndentationPlugin"
PB3 = "flake8_pantsbuild:TrailingSlashesPlugin"
PB6 = "flake8_pantsbuild:SixPlugin"

[tool.poetry.dependencies]
python = ">=2.7,<3.9,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*"
flake8 = ">=3.7"
importlib_metadata = {version = ">=1.3.0", python = "<3.8"}

[tool.black]
line-length = 100
target-version = ['py27']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
known_first_party = ["flake8_pantsbuild"]
known_third_party = ["pytest"]
